// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptinView Component should render a basic component: basic 1`] = `
<PageLayout
  className=""
>
  <Card
    data-test="optinView"
  >
    <Flex>
      <Flex
        flex={
          {
            "default": "flex_2",
          }
        }
      >
        <FlexItem>
          <CardTitle>
            <Title
              headingLevel="h1"
              size="2xl"
            >
              t(curiosity-optin.cardTitle, {"appName":"Subscriptions"})
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardDescription, {"appName":"Subscriptions"})
          </CardBody>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="xl"
            >
              t(curiosity-optin.cardSeeTitle)
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardSeeDescription)
          </CardBody>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="xl"
            >
              t(curiosity-optin.cardReportTitle)
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardReportDescription)
          </CardBody>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="xl"
            >
              t(curiosity-optin.cardFilterTitle)
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardFilterDescription)
          </CardBody>
          <CardFooter>
            <Form>
              <ActionGroup>
                <Button
                  data-test="optinButtonSubmitDisabled"
                  isDisabled={true}
                  variant="primary"
                >
                  t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
                </Button>
              </ActionGroup>
            </Form>
          </CardFooter>
        </FlexItem>
      </Flex>
      <Flex
        alignSelf={
          {
            "default": "alignSelfCenter",
          }
        }
        flex={
          {
            "default": "flex_1",
          }
        }
      >
        <FlexItem>
          <CardBody>
            <Card
              className="curiosity-optin-tour"
            >
              <CardHeader>
                <CardHeaderMain>
                  <Brand
                    alt="t(curiosity-optin.tourTitleImageAlt)"
                    aria-hidden={true}
                    className="curiosity-optin-image"
                    src="graph4x.png"
                    srcSet="graph4x.png 1064w, graph2x.png 600w"
                  />
                </CardHeaderMain>
              </CardHeader>
              <CardTitle>
                <Title
                  headingLevel="h3"
                  size="2xl"
                >
                  t(curiosity-optin.tourTitle)
                </Title>
              </CardTitle>
              <CardBody>
                t(curiosity-optin.tourDescription)
              </CardBody>
              <CardFooter>
                <Button
                  className="uxui-curiosity__button-tour"
                  data-test="optinButtonTour"
                  variant="secondary"
                >
                  t(curiosity-optin.buttonTour)
                </Button>
              </CardFooter>
            </Card>
          </CardBody>
        </FlexItem>
      </Flex>
    </Flex>
  </Card>
</PageLayout>
`;

exports[`OptinView Component should render an API state driven view: 4XX view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-test="optinButtonSubmitDisabled"
          disabled=""
          type="button"
        >
          t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`OptinView Component should render an API state driven view: 200 view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-test="optinButtonSubmitDisabled"
          disabled=""
          type="button"
        >
          t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`OptinView Component should render an API state driven view: 401 view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-2"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-test="optinButtonSubmitDisabled"
          disabled=""
          type="button"
        >
          t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`OptinView Component should render an API state driven view: 403 view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="false"
          class="pf-c-button pf-m-primary"
          data-ouia-component-id="OUIA-Generated-Button-primary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-test="optinButtonSubmit"
          type="button"
        >
          t(curiosity-optin.buttonActivate, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`OptinView Component should render an API state driven view: 500 view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-5"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-test="optinButtonSubmitDisabled"
          disabled=""
          type="button"
        >
          t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`OptinView Component should render an API state driven view: error view 1`] = `null`;

exports[`OptinView Component should render an API state driven view: fulfilled view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-8"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-test="optinButtonSubmitDisabled"
          disabled=""
          type="button"
        >
          t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
  <p>
    t(curiosity-optin.cardIsActiveDescription)
  </p>
</form>
`;

exports[`OptinView Component should render an API state driven view: initial view 1`] = `
<PageLayout
  className=""
>
  <Card
    data-test="optinView"
  >
    <Flex>
      <Flex
        flex={
          {
            "default": "flex_2",
          }
        }
      >
        <FlexItem>
          <CardTitle>
            <Title
              headingLevel="h1"
              size="2xl"
            >
              t(curiosity-optin.cardTitle, {"appName":"Subscriptions"})
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardDescription, {"appName":"Subscriptions"})
          </CardBody>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="xl"
            >
              t(curiosity-optin.cardSeeTitle)
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardSeeDescription)
          </CardBody>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="xl"
            >
              t(curiosity-optin.cardReportTitle)
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardReportDescription)
          </CardBody>
          <CardTitle>
            <Title
              headingLevel="h2"
              size="xl"
            >
              t(curiosity-optin.cardFilterTitle)
            </Title>
          </CardTitle>
          <CardBody>
            t(curiosity-optin.cardFilterDescription)
          </CardBody>
          <CardFooter>
            <Form>
              <ActionGroup>
                <Button
                  data-test="optinButtonSubmitDisabled"
                  isDisabled={true}
                  variant="primary"
                >
                  t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
                </Button>
              </ActionGroup>
            </Form>
          </CardFooter>
        </FlexItem>
      </Flex>
      <Flex
        alignSelf={
          {
            "default": "alignSelfCenter",
          }
        }
        flex={
          {
            "default": "flex_1",
          }
        }
      >
        <FlexItem>
          <CardBody>
            <Card
              className="curiosity-optin-tour"
            >
              <CardHeader>
                <CardHeaderMain>
                  <Brand
                    alt="t(curiosity-optin.tourTitleImageAlt)"
                    aria-hidden={true}
                    className="curiosity-optin-image"
                    src="graph4x.png"
                    srcSet="graph4x.png 1064w, graph2x.png 600w"
                  />
                </CardHeaderMain>
              </CardHeader>
              <CardTitle>
                <Title
                  headingLevel="h3"
                  size="2xl"
                >
                  t(curiosity-optin.tourTitle)
                </Title>
              </CardTitle>
              <CardBody>
                t(curiosity-optin.tourDescription)
              </CardBody>
              <CardFooter>
                <Button
                  className="uxui-curiosity__button-tour"
                  data-test="optinButtonTour"
                  variant="secondary"
                >
                  t(curiosity-optin.buttonTour)
                </Button>
              </CardFooter>
            </Card>
          </CardBody>
        </FlexItem>
      </Flex>
    </Flex>
  </Card>
</PageLayout>
`;

exports[`OptinView Component should render an API state driven view: null or undefined status view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-6"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          data-test="optinButtonSubmitDisabled"
          disabled=""
          type="button"
        >
          t(curiosity-optin.buttonIsActive, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`OptinView Component should render an API state driven view: pending view 1`] = `
<form
  class="pf-c-form"
  novalidate=""
>
  <div
    class="pf-c-form__group pf-m-action"
  >
    <div
      class="pf-c-form__group-control"
    >
      <div
        class="pf-c-form__actions"
      >
        <button
          aria-disabled="true"
          class="pf-c-button pf-m-primary pf-m-disabled"
          data-ouia-component-id="OUIA-Generated-Button-primary-7"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe="true"
          disabled=""
          type="button"
        >
          <span
            aria-label="Contents"
            aria-valuetext="Loading..."
            class="pf-c-spinner pf-m-sm"
            role="progressbar"
          >
            <span
              class="pf-c-spinner__clipper"
            />
            <span
              class="pf-c-spinner__lead-ball"
            />
            <span
              class="pf-c-spinner__tail-ball"
            />
          </span>
           
          t(curiosity-optin.buttonActivate, {"appName":"Subscriptions"})
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`OptinView Component should submit an opt-in form: dispatch 1`] = `
[
  [
    {
      "meta": {
        "notifications": {
          "fulfilled": {
            "autoDismiss": false,
            "description": "t(curiosity-optin.notificationsSuccessDescription)",
            "dismissable": true,
            "title": "t(curiosity-optin.notificationsSuccessTitle, {"appName":"Subscriptions"})",
            "variant": "success",
          },
          "rejected": {
            "description": "t(curiosity-optin.notificationsErrorDescription)",
            "dismissable": true,
            "title": "t(curiosity-optin.notificationsErrorTitle, {"appName":"Subscriptions"})",
            "variant": "danger",
          },
        },
        "query": {},
      },
      "payload": Promise {},
      "type": "UPDATE_USER_OPTIN",
    },
  ],
]
`;
